More stuff about forests

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -125,6 +125,8 @@ Regression trees are comparitively easy to understand and interpret and offer ce
 See: \cite{apaydin2022evaluation}
 
 Related: Canada with Weather Undergorund (WoW)~\cite{ho2014mapping} -> RMSE = 2.31 °C
+RFsp~\cite{hengl2018random} Random Forest for spatial prediction
+Random Forest for spatial Interpolation (RFSI)~\cite{sekulic2020random}
 
 % TODO: Downsides such as hyperparameter tuning, overfitting, extrapolation, etc.
 
