--- a/references.bib
+++ b/references.bib
@@ -859,6 +859,27 @@
   publisher={Elsevier}
 }
 
+@article{hengl2018random,
+  title={Random forest as a generic framework for predictive modeling of spatial and spatio-temporal variables},
+  author={Hengl, Tomislav and Nussbaum, Madlene and Wright, Marvin N and Heuvelink, Gerard BM and Gr{\"a}ler, Benedikt},
+  journal={PeerJ},
+  volume={6},
+  pages={e5518},
+  year={2018},
+  publisher={PeerJ Inc.}
+}
+
+@article{sekulic2020random,
+  title={Random forest spatial interpolation},
+  author={Sekuli{\'c}, Aleksandar and Kilibarda, Milan and Heuvelink, Gerard BM and Nikoli{\'c}, Mladen and Bajat, Branislav},
+  journal={Remote Sensing},
+  volume={12},
+  number={10},
+  pages={1687},
+  year={2020},
+  publisher={MDPI}
+}
+
 % Datasets
 @article{didan2021modis,
   title={MODIS/Terra vegetation indices 16-day L3 global 1 km SIN grid V061 [data set]},
