--- a/chapter8.tex
+++ b/chapter8.tex
@@ -13,6 +13,7 @@ In this chapter, the goal is to evaluate different use-cases for ML-based interp
 Next to these main uses cases we discuss in this work, the different regression models can be used in many other ways, primarily based on the features used during training. Some regression models could for example be used to predict future air temperature, however this is out of the scope of this work.
 
 \subsubsection{Validation Methodology}
+\label{sec:validation methodology}
 
 In order to validate the different models, we use the following methodology:
 
