--- a/references.bib
+++ b/references.bib
@@ -908,3 +908,40 @@
   publisher = { ESA - Copernicus },
   howpublished= {\url{https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_S2_SR}}
 }
+
+% ML models
+
+@article{ke2017lightgbm,
+  title={Lightgbm: A highly efficient gradient boosting decision tree},
+  author={Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+% Evaluation
+
+@inproceedings{kohavi1995study,
+  title={A study of cross-validation and bootstrap for accuracy estimation and model selection},
+  author={Kohavi, Ron and others},
+  booktitle={Ijcai},
+  volume={14},
+  number={2},
+  pages={1137--1145},
+  year={1995},
+  organization={Montreal, Canada}
+}
+
+% Python references
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
