--- a/chapter8.tex
+++ b/chapter8.tex
@@ -3,36 +3,132 @@
 
 % TODO: talk about the methodology of the evaluation
 
-In this chapter, the goal is to evaluate different use-cases for ML-based interpolation in the context of air temperature interpolation. In Chapter~\ref{chap:Machine Learning based Interpolation} the different models for ML-based interpolation were already introduced. Afterwards, the available data and features were introduced in Chapter~\ref{chap:preparations data sets}. In this chapter, the different models are compared with different data sets and features to test the feasability of two main use cases:
+The goal of this chapter is to evaluate different use-cases for ML-based interpolation in the context of air temperature interpolation. In Chapter~\ref{chap:Machine Learning based Interpolation}, different models for ML-based interpolation were already introduced. Afterwards, the available data and features were introduced in Chapter~\ref{chap:preparations data sets}. In this chapter, the different models are compared with different datasets and features to test the feasability of two main use cases:
 
 \begin{enumerate}
-  \item Areal interpolation of air temperature (for a specific time step)
-  \item Interpolation of air temperature for a specific location (over time)
+  \item Interpolation of air temperature for a specific location
+  \item Areal interpolation of air temperature
 \end{enumerate}
 
-Next to these main uses cases we discuss in this work, the different regression models can be used in many other ways, primarily based on the features used during training. Some regression models could for example be used to predict future air temperature, however this is out of the scope of this work.
+Next to these main uses cases we discuss in this work, the different regression models can be used in many other ways, primarily based on the features used during training. Some regression models could for example be used to predict future air temperature as well, however this is out of the scope of this work.
+
+\subsubsection{Implementation Details}
+
+All ML models are implemented using Python and the scikit-learn library~\cite{scikit-learn}. Additionally the following libraries are used:
+
+\begin{itemize}
+  \item Pandas, Numpy, Geopandas, scipy, matplotlib, shapely, contextily, pytz, sklearn, seaborn, rasterio, polars, Google Earth Engine, pykrige, pytorch, missingno, 
+\end{itemize}
 
 \subsubsection{Validation Methodology}
 \label{sec:validation methodology}
 
-In order to validate the different models, we use the following methodology:
+In order to validate the different models, we use the following methodology:\\
+\\
+We evaluate two locations based on data availability, e.g. Hamburg and Stuttgart, that also have slightly different climate characteristics, tho both are located in Germany in a moderate cool climatic zone, with Hamburg located near the coast in rather maritim climate and Stuttgart located more inland in a continental climate. Hamburg has also higher precipitation and wind compared to Stuttgart.
+For both locations, we collected PWS data from Netatmo and Sensor.Community, however Netatmo data is only available for the whole month of June 2023 for Hamburg and for a single timestep on 19. June 2023 14h for Stuttgart, while Sensor.Community data is available for the whole months of January and June 2023 for both locations.\\
+For both locations for both interpolation use-cases, we first compare all available models, e.g. Linear Regression (baseline), KNN, Random Forest, SVM, and Histogram-based Gradient Boosting, with all features against each other to get an understanding of the overall performance of the models and maximum achivable potential, given the assumption that more features generally improve prediction quality. The datasets are split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly. The same split is used for all models and sensors to ensure comparability.
+Afterwards, the most promising model with the lowest error is used to further evaluate specific influences such as distances between neighbours or the amount of training data and time intervals. For the further evaluation, 5-Fold Cross Validation is used in order to reduce the risk of overfitting~\cite{kohavi1995study}. We note here, that a k of 10 would be preferred, however due to the computational overhead we only use a k of 5 for exploration.\\
+All ML models in the initial evaluation are trained using the default parameters as defined in the scikit-learn library. The only exception is the number of estimators for the Random Forest Regressor and the number of iterations for the Histogram-based Gradient Boosting Regressor, which are both increased from 100 to 200 to improve the performance of the models as found out by previous exploration. In order to get the best possible performance of each model, an exhaustive grid search would be prefered for all models in order to fine-tune all hyperparameters, however due to the computational overhead of running exhaustive grid searches, this is not feasible in the scope of this work.\\
+For the error metrics, the following candidates are available: MSE, MAE, RSME, R2. MSE is the most commonly used error metric and is more sensitive to outliers, whereas MAE punishes outliers less but is therefore also more variable. Related work commonly uses RSME as it has the same unit as the response variable, therefore RSME is used as the main error metric. R2 is additonally used to get an understanding of the variance of the model.
 
-\begin{itemize}
-  \item The dataset is split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly, but the same split is used for all models to ensure comparability.
-  \item Additional reference stations are used where available to compare the interpolated values with reference values. Reference stations are stations that are operated by WMO standard, such as DWD stations. The reference stations are not used for training, but only for qualitative evaluation.
-  \item The models are trained and evaluated using loss functions. The loss functions used in this work are: Mean Absolute Error (MAE), Mean Squared Error (MSE), Root Mean Squared Error (RMSE), and R2 Score and are shown for the evaluation.
-\end{itemize}
+\section{Interpolation of Air Temperature for a Specific Location}
 
-Different loss functions have different advantages and disadvantages. For example the RSME is more robust against outliers while the MSE punishes bigger errors more. Depending on the use-case different loss functions can be better suited and should be evaluated.
+The first use-case to be evaluated is the interpolation of air temperature for a specific sensor. The main idea behind this approach is to use ML models to capture the dependency between neighbouring weather stations and sensors, so that in case a sensor is not available, the air temperature can be interpolated more easily, especially over a longer period of time. Another use-case could be that a sensor location is not stationary, and the sensor for example moves through a city mounted on a bus or bike. In this case, the sensor could be used to capture a snapshot of the air temperature at a previously unobserved location, increasing the spatial coverage of the sensor network.\\
+The evaluation for a specific location is done using the following steps:
 
+\begin{enumerate}
+  \item Create datasets for training and testing based on the datasets for June 2023 after QC for Hamburg and Stuttgart
+  \item Data preprocessing for the specific models. Only Histogram-based Gradient Boosting supports missing values, therefore we need to fill in missing values for all other models using an imputer. We use a simple mean imputer for this purpose, that fills missing values with the mean value for each row, not column. All input data is normalized using a standard scaler. This preprocessing step could be further improved by using different means of imputation or using different scalers.
+  \item Fit each model using the datasets and evaluate the performance using all available features for all locations to get an overview of the performance of each model. The dataset is split 70\% for training and 30\% for testing, but no k-Fold Cross Validation is used due to the computational overhead.
+  \item Choose the most promising model and further evaluate the influence of different features, e.g.\ distances between neighbours, and the amount of training data and time intervals. This step only selects a subset of stations of particular interest, e.g.\ in the city center or near water, adds 5-Fold Cross Validation and grid search to fine-tune the hyperparameters of the model.
+\end{enumerate}
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=1\textwidth]{images/rmse_by_model_type.png}
+  \caption{RMSE by Model Type with the Confidence Interval of 95\%}
+  \label{fig:rmse by model type}
+\end{figure}
+
+\subsection{Model Comparison}
+
+First, we compare the overall performance of the models against each other. Figure~\ref{fig:rmse by model type} shows the RMSE of each model accross both Hamburg and Stuttgart for the month of June 2023. For all models, one evaluation was done using the imputed dataset without missing values, as Linear Regression, KNN, Random Forest and SVM Regression cannot handle missing values. Gradient Bootsting was once run with and once run without imputed data, where the imputed data performed better at 2 neighbours, possibly due to neighbours with missing values, but performed slightly worse than not imputed data for higher amounts of neighbours. SVM, KNN and Random Forest seem to hit a plato when reaching a certain number of neighbours, around 15-20, whereas Linear Regression and Gradient Boosting continue to improve with a higher number of neighbours.\\
+Gradient Boosting shows the lowest RMSE starting with over 10 neighbours and has the smallest confidence interval. The non imputed data also performs slightly better, as seen in Appendix (TODO: Link), therefore we will continue a more detailed evaluation with the Gradient Boosting model without imputed data. It is to note, that the individual models were mainly run with default parameters as given by sklearn library, therefore the performance of the individual models could be further improved. The exact parameter configurations can be found in Appendix~\ref{appendix: sklearn ml parameters single station}.
+
+\subsection{Further Evaluation - Gradient Boosting}
+
+HistGradientBoostingRegressor without imputation achives overall the lowest RMSE starting with more than 10 neighbours and continously improves with more neighbours, however the improvements after 30 neighbours are really small. This model is great because it has native NaN support and we can save the imputation step that can possible introduce bias into the model. The difference to KNN and Random Forest is not that big with a little less than RSME of 0.1, however the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as Random Forests and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of QC on the process. 
+
+\subsubsection{Influence of Distance between Neighbours}
+% Hypotheses: closer neighbours have a higher influence on the temperature
+The goal with hyperlocal temperature mapping is to get a deep insight into very local climatic conditions. If two sensors are located in the same climatic conditions, in an extreme case directly situated next to each other, both sensors should measure the same temperature. Therefore the hypotheses is, that closer stations have a higher influence on the prediction quality, e.g. if closer stations are choosen as neighbours, the prediction quality is better compared than if the same number of neighbours is choosen but further away. Next 
+
+
+\subsubsection{Influence of Non-Stationary Sensors}
+
+Inplicitly included via QC process, because many values are already missing -> check for subset with more data available how missing values influence the model
+
+% Optional:
+% - 
+% - Influence of different features
+% - Compare January and June
+% - test with m4 data instead of m5
+% - compare with DeepLearning model
+
+% Areal Interpolation
 \section{Areal Interpolation of Air Temperature}
 
-- Reference of a traditional geostatistical method -> Kriging
-  - smoothes out the area between points and fills in missing points
-  - no extrapolation between the max-min of the 2 points because in between no information is known
-  - some limitations such as that over time the mean does not change (not applicable for air temperature due to climate change?)
+The second use-case for ML-based interpolation of air temperature is the areal interpolation, e.g.\ turning a set of single data points into a continuous temperature grid. The problem with this approach is that in comparison to interpolating a single sensor, there are potentially many locations that have no sensor data and therefore no target variable to be trained with. The main assumption here is that locations with similar features, e.g.\ land coverage, soil temperature, sky view factor, solar radiance, etc.\ have similar air temperature. The main challenge here is to find the right features that capture the dependency between the different locations.\\
+In the first step, we simply use the coordinates of each data point in order to train the model in addition to remote sensing data, as land coverage and surface roughness have a high impact on air temperature.(Cite LCZ studies).
+Further improvements
 
-- in comparison, training a regressor with more features could potentionally give the model additonal information. Especially in the context of urban environments, information such as surface rougness levels, e.g. building and vegeation cover, sourced from remote sensing with good spatial coverage, could improve the prediction quality.
+- parameters:
+  - grid cell size
+
+- todos:
+  - try to get surface temperature for specific time step -> LST high influence on TA?
+
+\subsection{Model Comparison}
+
+- more features compared to location interpolation: land coverage, soil temperature, sky view factor, from satellite data and google earth engine
+
+- improvements:
+  - predict air temperature based on LST for better training
+
+baseline: mean, IWD, ordinary kriging (with different kernels)
+
+\subsection{Geostatical Interpolation Baseline}
+In order to evaluate the performance of the ML model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as inverse weight distance (IWD) or k-nearest neighbours (KNN) that are easy and performant, but struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Krigin, which is based on a gaussian process and uses a covariance function to model the spatial correlation between data points. The covariance function is a measure of the similarity between two data points, which is used to calculate the weight of the data point in the interpolation process. There are different types of Krigin methods available, each suited for different use cases, including:
+
+\begin{enumerate}
+    \item Simple Krigin: the simplest form of Krigin, that assumes that the mean of the measured values is known and constant
+    \item Ordinary Krigin: same as Simple Krigin, but the mean is an unknown constant
+    \item Universal Krigin: instead of assuming a constant mean, the mean is modeled as a deterministic function
+    \item Indicator Krigin: same as Ordinary Krigin, but for categorical data
+    \item Propability Krigin: same as Indicator Krigin, but assumes two types of random errors that can are each auto-correlated and cross-correlated to each other
+    \item Disjunctive Krigin: same as Ordinary Krigin, but tries to improve the prediction quality by using an unknown constant and approximating an arbitrary function. It requires the bivariate normality assumption and is difficult to verify and solutions might be mathematically and computationally complicated
+    \item Cokrigin: offers methods for the previous Krigin methods, but uses information on several variable types. This could improve the prediction quality, but might increase the variance of the prediction, as more much more estimation is required
+\end{enumerate}
+
+In the context of geostatistical analysis, there are different types of Krigin methods available that combine the aforementioned methods with other techniques, such as regression analysis. The following list is the geostaticial methods offered by ArcGIS Pro as part of the Geostatical Analyst toolbox~\footnote{\url{https://pro.arcgis.com/en/pro-app/latest/tool-reference/geostatistical-analyst/an-overview-of-the-geostatistical-analyst-toolbox.htm}}:
+
+% TODO: add more details for each method
+\begin{enumerate}
+    \item Empirical Bayesian Krigin (EBK)
+    \item Empircal Bayesian Krigin 3D (EBK3D)
+    \item EBK Regression Prediction (EBKRP): Empirical Bayesian Kriging with regression prediction
+    \item Global Polynominal Interpolation
+    \item Kernel Interpolation with Barriers
+    \item Moving Window Krigin
+    \item Radial Basis Function
+\end{enumerate}
+
+In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to \cite{njoku2023effects}, EBKRP continously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
+In the following, the machine learning fundamentals for this work are explained and the different ML regression model types are introduced.
+
+
+\subsection{Further Evaluation - HistGradientBoostingRegressor}
 
 \subsection{Datasets for Evaluation}
 
@@ -89,42 +185,8 @@ DWD Reference location: 48.6883;9.2235 -> DWD id: 4931, Daily Max, Mean and Min 
 
 Todo: add Hamburg station locations\\
 
-\section{Model Evaluation}
-
-Choose one model that performs the best
-
 \section{Variable Importance}
 
-\subsection{Geostatical Interpolation Comparison}
-In order to evaluate the performance of the ML model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as inverse weight distance (IWD) or k-nearest neighbours (KNN) that are easy and performant, but struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Krigin, which is based on a gaussian process and uses a covariance function to model the spatial correlation between data points. The covariance function is a measure of the similarity between two data points, which is used to calculate the weight of the data point in the interpolation process. There are different types of Krigin methods available, each suited for different use cases, including:
-
-\begin{enumerate}
-    \item Simple Krigin: the simplest form of Krigin, that assumes that the mean of the measured values is known and constant
-    \item Ordinary Krigin: same as Simple Krigin, but the mean is an unknown constant
-    \item Universal Krigin: instead of assuming a constant mean, the mean is modeled as a deterministic function
-    \item Indicator Krigin: same as Ordinary Krigin, but for categorical data
-    \item Propability Krigin: same as Indicator Krigin, but assumes two types of random errors that can are each auto-correlated and cross-correlated to each other
-    \item Disjunctive Krigin: same as Ordinary Krigin, but tries to improve the prediction quality by using an unknown constant and approximating an arbitrary function. It requires the bivariate normality assumption and is difficult to verify and solutions might be mathematically and computationally complicated
-    \item Cokrigin: offers methods for the previous Krigin methods, but uses information on several variable types. This could improve the prediction quality, but might increase the variance of the prediction, as more much more estimation is required
-\end{enumerate}
-
-In the context of geostatistical analysis, there are different types of Krigin methods available that combine the aforementioned methods with other techniques, such as regression analysis. The following list is the geostaticial methods offered by ArcGIS Pro as part of the Geostatical Analyst toolbox~\footnote{\url{https://pro.arcgis.com/en/pro-app/latest/tool-reference/geostatistical-analyst/an-overview-of-the-geostatistical-analyst-toolbox.htm}}:
-
-% TODO: add more details for each method
-\begin{enumerate}
-    \item Empirical Bayesian Krigin (EBK)
-    \item Empircal Bayesian Krigin 3D (EBK3D)
-    \item EBK Regression Prediction (EBKRP): Empirical Bayesian Kriging with regression prediction
-    \item Global Polynominal Interpolation
-    \item Kernel Interpolation with Barriers
-    \item Moving Window Krigin
-    \item Radial Basis Function
-\end{enumerate}
-
-In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to \cite{njoku2023effects}, EBKRP continously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
-In the following, the machine learning fundamentals for this work are explained and the different ML regression model types are introduced.
-
-\section{Interpolation of Air Temperature for a Specific Location}
 
 
 TODO
@@ -178,18 +240,6 @@ Steps:
 
 - deep learning approach with neural networks -> itteratively improve model by adding additional features, compare with reference approach
 
-
-
-\section{Model Evaluation}
-
-TODO
-
-\subsection{Model Validity}
-
-% TODO
-Use 70\% of data for training, 30\% for test. cross-validation
-
-\section{Variable Importance}
 
 \section{Uncertainty Analysis}
 
