--- a/chapter8.tex
+++ b/chapter8.tex
@@ -58,23 +58,62 @@ Gradient Boosting shows the lowest RMSE starting with over 10 neighbours and has
 
 \subsection{Further Evaluation - Gradient Boosting}
 
-HistGradientBoostingRegressor without imputation achives overall the lowest RMSE starting with more than 10 neighbours and continously improves with more neighbours, however the improvements after 30 neighbours are really small. This model is great because it has native NaN support and we can save the imputation step that can possible introduce bias into the model. The difference to KNN and Random Forest is not that big with a little less than RSME of 0.1, however the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as Random Forests and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of QC on the process. 
+HistGradientBoostingRegressor without imputation achives overall the lowest RMSE starting with more than 10 neighbours and continously improves with more neighbours, however the improvements after 30 neighbours are really small. This model is great because it has native NaN support and we can save the imputation step that can possible introduce bias into the model. The difference to KNN and Random Forest is not that big with a little less than RSME of 0.1, however the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as Random Forests and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of QC on the process.\\
+
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=1\textwidth]{images/rmse_10_neighbours_min_distance.png}
+    \caption{RMSE for Increasing Minimum Distance with 10 Neighbours, Hamburg, Netatmo}
+    \label{fig:eval hamburg minimum distance between stations}
+
+    \centering
+    \includegraphics[width=1\textwidth]{images/rmse_10_neighbours_min_distance_by_pid.png}
+    \caption{RMSE for Increasing Minimum Distance with 10 Neighbours By Station Id, Hamburg, Netatmo}
+    \label{fig:eval hamburg minimum distance between stations by station id}
+\end{figure}
 
 \subsubsection{Influence of Distance between Neighbours}
+
 % Hypotheses: closer neighbours have a higher influence on the temperature
-The goal with hyperlocal temperature mapping is to get a deep insight into very local climatic conditions. If two sensors are located in the same climatic conditions, in an extreme case directly situated next to each other, both sensors should measure the same temperature. Therefore the hypotheses is, that closer stations have a higher influence on the prediction quality, e.g. if closer stations are choosen as neighbours, the prediction quality is better compared than if the same number of neighbours is choosen but further away. Next 
+The goal with hyperlocal temperature mapping is to get a deep insight into very local climatic conditions. If two sensors are located in the same climatic conditions, in an extreme case directly situated next to each other, both sensors should measure the same temperature. Therefore the hypotheses is, that closer stations have a higher influence on the prediction quality, e.g.\ if closer stations are choosen as neighbours the prediction quality is better compared than if the same number of neighbours is choosen but further away. We investigate this hypotheses by comparing the RMSE of prediction quality for different distances between neighbours. Because there are not so many stations available for Hamburg, that for example 10 stations could be selected in a 500m radius, we look at the minimum distance instead and remove neighbours that are to close to the station.\\
+The evaluation is done using 5-fold cross validation for a subset of 10 stations in Hamburg, spread across a bigger area so we can cover different distances between neighbours and different climatic conditions, e.g.\ distance to water, situated in the city center etc. The list of stations can be found in Appendix~\ref{appendix stations for minimum distance between stations}. The number of neighbours was set to 10 as this number was the number at which Gradient Boosting putperformed other models. Figure~\ref{fig:eval hamburg minimum distance between stations} shows the RMSE for different minimum distances between stations in km for 10 stations from Netatmo in Hamburg with 10 neighbours. We can see that the RMSE is increasing minimally across the first few kilometers and then starts to sharply increase with greater distances over 10km. However, if we take a look at Figure~\ref{fig:eval hamburg minimum distance between stations by station id} which shows the same data but grouped by station id, we can see that there are several stations whose RMSE does not increase with greater distances.\\ % Todo: why?
 
+\subsubsection{Feature Importance}
 
-\subsubsection{Influence of Non-Stationary Sensors}
+Next to the temperature, there are also other features that could be included in the prediction process such as the time, humidity, pressure, etc. In order to understand how much the features contribute to the overall prediction quality, we first compare the RMSE of the model with only the temperature as input feature for each neighbour, and then test with adding time, humidity, pressure, and finally all features combined. Time is only a single column of the transformed timestamp, whereas humidity and pressure are added for each neighbour. In the end the input looks as follows: [ta\_1... ta\_n, time, humidity\_1... humidity\_n, pressure\_1... pressure\_n]\\
+Figure~\ref{fig:eval feature importance 10 stations single location} shows the RMSE for different features for 10 stations in Hamburg with 30 neighbours. We can clearly see, that there is no visible difference between only temperature and all features combined, therefore in Figure~\ref{fig:eval permutation importance single station} we take a look at the permutation importance of a single station for temperature and time on a 30\% test set. The values are calculated based on the trained regressors from the 5 different folds of the cross validation, however the test set was always the same and not the same used during the cross-validation, due to technical limitations in the sklearn library. However, the results indicates that only a very small number of stations, in this case the neighbours 4 and 13, have a high influence on the prediction quality. All other stations have a very low influence on the prediction quality, with time having no visible influence at all. This is a very interesting result, as it indicates that the model only needs a handful of neighbours that have similar temperature distributions to the target station in order to make a good prediction. Other features such as time, humidity and pressure do not seem to have any influence on the prediction quality, and could therefore be ignored, saving computational resources and making the model more robust. This assumption could be further validated by looking at more stations and their permutation importances.\\ 
 
-Inplicitly included via QC process, because many values are already missing -> check for subset with more data available how missing values influence the model
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=1\textwidth]{images/rmse_30_neighbours_feature_importance_by_pid.png}
+    \caption{RMSE based on Features Selected with 30 Neighbours, Hamburg, Netatmo}
+    \label{fig:eval feature importance 10 stations single location}
 
-% Optional:
-% - 
-% - Influence of different features
-% - Compare January and June
-% - test with m4 data instead of m5
-% - compare with DeepLearning model
+    \centering
+    \includegraphics[width=1\textwidth]{images/rmse_30_neighbours_permutation_importance_by_pid.png}
+    \caption{Permutation Importance for Single Station on 5-Fold Cross Validation, Hamburg, Netatmo}
+    \label{fig:eval permutation importance single station}
+\end{figure}
+
+\subsubsection{Influence of Quality Control, Time Intervals and Non-Stationary Sensors}
+
+% Inplicitly included via QC process, because many values are already missing -> check for subset with more data available how missing values influence the model
+% - compare m4 vs m5
+
+Sensor networks have the advantage, compared to remote sensing approaches, that they provide high temporal resolutions, however at the cost of spatial coverage. Related studies in the field of sensor networks suggest, %TODO: cite
+that stationary sensor networks show less variability, but suffer from lower spatial coverage. In comparison, fully mobile sensor networks have a higher spatial coverage, but suffer from higher variability. Combining both approaches could therefore be a promising approach to increase the spatial coverage of the sensor network, while still maintaining a high prediction quality.\\
+In the context of air temperature sensing, air temperature sensors could be mounted to busses, cars, scooters, or bikes. Unfortunately, there are currently no such datasets available, however we can simulate a non-stationary sensor by removing data points of specific sensors in either a fixed interval, e.g.\ simulating a bus line that visits a certain location in a rather fixed interval, or randomly, simulating a bike or scooter that is used periodically.\\
+We have already indirectly simulated missing data by applying QC steps before using the station data to train the models, as seen in Section~\ref{sec:quality control}, where we lose quite some data, especially for Sensor.Community in the m5 buddy check. In order to further investigate the influence of missing data, we instead of using data that passed the m5 check, we will use data that passed the m4 check, which is less strict and therefore has more data available. An interesting exploration could be to use the previous sensor with Netatmo Station Id \textit{70ee:50:83:b1:e2} and choose on of the neighbours that has a high influence on the prediction quality, e.g.\ neighbour 4, and remove data points in both fixed and random intervals to simulate a moving sensor instead of a stationary sensor. We could also check what happens, if not only one but multiple neighbours are turned into simulated moving sensors, maybe with different intervals.\\
+First, we need to get an understanding how the different QC steps influence the interpolation process. Therefore, we compare the RMSE for both m4 and m5 QC step for the 10 already used stations with 30 neighbours and the time feature.
+
+% TODO: add figure for m4 vs m5
+% TODO: add figure for different time intervals
+
+% TODO: optional
+% \subsubsection{January vs June}
+
+% TODO: optional
+% \subsubsection{Neural Network Exploration}
 
 % Areal Interpolation
 \section{Areal Interpolation of Air Temperature}
@@ -185,10 +224,6 @@ DWD Reference location: 48.6883;9.2235 -> DWD id: 4931, Daily Max, Mean and Min 
 
 Todo: add Hamburg station locations\\
 
-\section{Variable Importance}
-
-
-
 TODO
 First compare only air temperature for stations that are near a reference station and have enough buddies for sensor community
 - only for june 2023 from sensor community, not january as heat islands are not as important in winter (which depends on the context ofc if the goal is f.e. to save heating costs, could be a factor)
@@ -198,31 +233,6 @@ Steps in the evaluation:
 - Compare different interpolation approaches
   - linear, forests, KNN, NNetwork
   - with different amounts of data available (99\% -> 1\%) and see how RSME evolves
-
-1. Data Collection and rough analysis
-  1.1. Get data from Sensor.Community
-  1.2. Get data from DWD
-  1.3. Get data from satellites via Google Earth Engine
-  1.4. Get data from Netatmo (Hamburg, try to get Stuttgart as reference with historical data via API)
-2. QC steps (TA first)
-  2.1. Try to remove indoor stations and stations with irregular data
-  2.2. Remove stations based on buddy check (removes a lot of sensor community stations due to lower density)
-  2.3. Reference station has high quality data already, but can be used as a reference (interesting the comparison from 2m TA to 5cm TA)
-  2.4. Discuss QA for other parameters (Humidity, Pressure etc.)
-3. Comparison of models
-  3.1. Simple models with only coordinates as input features and TA as target feature
-  3.2. Add additional features (land coverage (NDVI, EVI)) and see how they improve the model
-    3.2.1. For land coverage etc.\ compare different satellites and resolutions
-    3.2.2. For coordinates/distances, compare different ways of calculating distances or modelling them in the model
-    3.2.3. Compare influence of normalization
-  3.3. Try to create a more complex NN model to show capabilities of NNs and try out LSTM for time series
-  3.4. Compare different loss functions and metrics (MSE, MAE, RMSE)
-  3.5. Choose final candidate that seems the most promissing and compare with reference approach
-4. Comparison with refrence approaches
-  4.1. Compare with simple Ordinary Kriging approach (with different kernels)
-  4.2. Discuss problem of not being able to extrapolate
-
-
 
 
 Steps:
@@ -239,11 +249,6 @@ Steps:
   - semivariogram: https://pro.arcgis.com/en/pro-app/latest/help/analysis/geostatistical-analyst/understanding-a-semivariogram-the-range-sill-and-nugget.htm
 
 - deep learning approach with neural networks -> itteratively improve model by adding additional features, compare with reference approach
-
-
-\section{Uncertainty Analysis}
-
-measurement uncertainty, contextual uncertainty, prediction uncertainty
 
 % Overall steps
 
